--- a/web/tree/main.css
+++ b/web/tree/main.css
@@ -197,8 +197,7 @@ div.logo.inverse:before {
   margin-bottom: 3rem;
   padding: 0;
   background-color: transparent;
-  width: auto;
-  max-width: none; }
+  width: auto; }
   .ctrl.navbar,
   .ctrl.navbar .items {
     height: 3rem; }
